// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Encrypted > should match full metadata snapshot for entity with encrypted field 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "EncryptedWithPredicate",
    "named": true,
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "name": "id",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [
        "update",
        "upsert",
      ],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": {
        "kryptos": null,
        "predicate": {
          "purpose": "pii",
        },
      },
      "enum": null,
      "hideOn": [],
      "key": "ssn",
      "max": null,
      "min": null,
      "mode": null,
      "name": "ssn",
      "named": false,
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": [],
      "scale": null,
      "schema": null,
      "sensitive": null,
      "transform": null,
      "type": "string",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`Encrypted > should stage a bare descriptor when no options are provided 1`] = `
{
  "kryptos": null,
  "predicate": null,
}
`;

exports[`Encrypted > should stage a predicate with multiple keys 1`] = `
{
  "kryptos": null,
  "predicate": {
    "id": "key-id",
    "purpose": "pii",
  },
}
`;

exports[`Encrypted > should stage the predicate 1`] = `
{
  "kryptos": null,
  "predicate": {
    "purpose": "pii",
  },
}
`;
